@@ -944,6 +944,24 @@ class CollectionToSet
   end
 end
 
+class NotInToLattice
+  include Bud
+
+  state do
+    lset :s1
+    scratch :t1
+    table :t2
+  end
+
+  bootstrap do
+    t2 <= [[1, 1]]
+  end
+
+  bloom do
+    s1 <= t1.notin(t2, :key => :key)
+  end
+end
+
 class TestSet < MiniTest::Unit::TestCase
   def test_set_simple
     i = SimpleSet.new
@@ -1056,6 +1074,13 @@ class TestSet < MiniTest::Unit::TestCase
     i.t2 <+ [[10, 11]]
     i.tick
     assert_equal([1, 3, 4, 5, 6, 10, 11].to_set, i.s1.current_value.reveal)
+  end
+
+  def test_collection_notin_to_set
+    i = NotInToLattice.new
+    i.t1 <+ [[1, 5], [2, 10], [3, 15]]
+    i.tick
+    assert_equal([2, 3, 10, 15].to_set, i.s1.current_value.reveal)
   end
 
   # We want to check that the set lattice eliminates duplicates from its input,
