@@ -8,6 +8,7 @@
 * Fix bug in rescan/invalidation for rules that reference lattice values and use
   the <+ or <~ operators (#290)
 * Fix bug in rescan logic for notin operator (#291)
+* Fix error when output from a notin operator was fed into a lattice
 
 == 0.9.5 / 2012-11-24
 
